<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--sorted by alphabetical order-->

    <string name="action_example">Up</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="album_count">albums</string>
    <string name="albums">Albums</string>
    <string name="app_name">ZMPlayer2</string>
    <string name="artists">Artists</string>
    <string name="autopause">Autopause</string>
    <string name="autopause_call">Phone call</string>
    <string name="autopause_headphones">Headphones detached</string>
    <string name="download_art">Download album art</string>
    <string name="misc">Misc</string>
    <string name="now_playing">Now playing</string>
    <string name="rescan">Rescan library</string>
    <string name="title_library">Library</string>
    <string name="title_files">Files</string>
    <string name="title_player">Player</string>
    <string name="tracks">Tracks</string>
    <string name="tracks_count">tracks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--preferences strings-->
    <string name="pref_autopause_call">autopause_call</string>
    <string name="pref_autopause_headphones">autopause_headphones</string>
    <string name="pref_download_art">download_art</string>
    <string name="pref_last_song">last_song</string>

</resources>
